# LLM_mlflow_template

./: .dockerignore  .gitignore  ARCHITECTURE.md  Dockerfile  MLflow_3_GenAI_Guide_for_Code_Agents.md  README.md  docker-compose.yml  llm_config.yaml  pyproject.toml
.claude/: settings.json  settings.local.json
.claude/commands/: import-parser.md  migrate.md  project-init.md  workflow-build.md
.github/workflows/: ci.yml
app/: __init__.py  main.py
app/agents/: __init__.py  base_agent.py
app/agents/examples/: tool_agent.py
app/api/: __init__.py  auth.py  models.py  router.py
app/dataloader/: __init__.py  base.py  local.py  models.py
app/evaluator/: __init__.py  models.py  runner.py  scorers.py
app/evaluator/scorers/: __init__.py  base.py  builtin.py  llm_scorer.py
app/logger/: __init__.py  setup.py
app/prompts/: __init__.py  manager.py  optimize.py
app/tracking/: __init__.py  mlflow_logger.py  prompts.py  setup.py  tracer.py
app/utils/: __init__.py  config.py
app/workflow/: __init__.py  base.py  build_workflow.py  nodes.py  state.py
app/workflow/tools/: __init__.py  parser.py  structured_output.py  validator.py
config/: config.yaml  dev.yaml  prod.yaml  stg.yaml  test.yaml
config/api/: default.yaml
config/dataloader/: default.yaml
config/llm/: default.yaml
config/mlflow/: default.yaml
data/eval/: test_cases.json
docs/: API_REFERENCE.md  CONFIGURATION.md  FAQ.md  QUICKSTART.md
docs/changelog/: 2026-03-16-simplify-and-skills.md  2026-03-17-ai-service-trace-retry.md
docs/technical/: ai-service-trace-retry.md  simplify-and-skills.md
docs/usage/: ai-service-trace-retry.md  skills-guide.md
examples/: 01_hello_world.ipynb  02_custom_workflow.ipynb  02_single_node_test.ipynb  03_evaluation.ipynb  03_full_workflow.ipynb  04_evaluation.ipynb  04_mlflow_tracking.ipynb  04_prompt_management.ipynb  05_adk_agent_phoenix.ipynb  05_multi_env.ipynb  06_complex_multimodel_workflow.ipynb
llm_service/: __init__.py  auth.py  client.py  config.py  factory.py  models.py  service.py  trace.py
src/llm_framework/: __init__.py  config.py  llm_client.py
src/llm_framework/mlflow/: __init__.py  evaluator.py  experiment.py  logger.py  tracer.py
src/llm_framework/utils/: env.py
src/llm_framework/workflow/: __init__.py  base.py  state.py
src/llm_framework/workflow/tools/: __init__.py  parser.py  prompt_template.py  retry.py  structured_output.py  validator.py
tests/: conftest.py  test_api.py  test_config.py  test_dataloader.py  test_evaluator.py  test_llm_client.py  test_llm_service.py  test_logger.py  test_mlflow.py  test_tracking.py  test_workflow.py
tests/test_mlflow/: test_evaluator.py  test_experiment.py  test_logger.py  test_tracer.py
tests/test_workflow/: test_base.py  test_state.py  test_tools.py
