[project]
name = "llm-project-template"
version = "0.3.0"
description = "通用 LLM 後端服務模板 — 整合 LiteLLM + LangGraph + Google ADK + MLflow 3.x，提供 tracing、evaluation、prompt optimization 等功能。"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
    # LLM Service 核心
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "litellm>=1.60.0",
    "openai>=1.0.0",

    # Web Framework
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",

    # Utilities
    "loguru>=0.7",
    "tenacity>=9.0",
    "httpx>=0.27",

    # LangGraph Workflow (使用 ChatLiteLLM)
    "langchain-litellm>=0.6.0",
    "langchain-core>=0.3",
    "langgraph>=0.4.0",
]

[dependency-groups]
dev = [
    "mlflow>=3.10.0",
    "pytest>=8.0",
    "pytest-cov>=6.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
]

adk = [
    "google-adk>=1.0.0",
]

observability = [
    "mlflow>=3.10.0",
    "arize-phoenix>=8.0.0",
    "openinference-instrumentation",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v --tb=short"
asyncio_mode = "auto"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
